apps/kubevirt-manager/base/vms-namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: vms
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/autit: privileged
