apps/kubevirt-manager/base/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  hostnames:
  - kubevirt-manager.seigra.net
  parentRefs:
  - kind: Gateway
    name: kubevirt-manager
    sectionName: kubevirt-manager
  rules:
  - backendRefs:
    - name: kubevirt-manager
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
